@@ -1,5 +1,11 @@
 2017-03-19  Bruno Haible  <bruno@clisp.org>
 
+	Fix an autoconf test crash on IA64.
+	* m4/mmap.m4: On IA64, don't try to mmap at the address where the
+	executable sits.
+
+2017-03-19  Bruno Haible  <bruno@clisp.org>
+
 	Update to the newest gnulib.
 	Ran "make -f Makefile.devel build-aux-update gnulib-imported
 	build-prerequisites".
